--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="/src/style.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css2?family=Noto+Sans+Lao+Looped&family=Noto+Sans+TC:wght@100..900&family=Noto+Serif+TC&display=swap">
     <title>宇你Youniverse</title>
